fix: fixed borderimage coloring and aboutme spacing

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -45,13 +45,27 @@
      line-height: 1;
      font-weight: 800;
      letter-spacing: -0.05rem;
+     padding-top: 0.25rem;
+     padding-bottom: 0.25rem;
+     padding-right: 0rem;
+     padding-left: 0rem;
+}
+ .headingPostTitleId {
+     color: #222222;
+     font-size: 2.5rem;
+     line-height: 1;
+     font-weight: 800;
+     letter-spacing: -0.05rem;
 }
  .headingProjects {
      color: #222222;
      font-size: 1.5rem;
      line-height: 1.3;
      font-weight: 700;
-     margin: 10px 0px;
+     margin-top: 10px;
+     margin-bottom: 12px;
+     margin-right: 0px;
+     margin-left: 0px;
      letter-spacing: -0.05rem;
 }
  .headingAbout {
@@ -76,6 +90,7 @@
      font-weight: bold;
 }
  .borderCircle {
+     border: 4px solid #f7cf25;
      margin: 0px 0px;
      border-radius: 999999px;
 }
@@ -445,12 +460,24 @@
          margin-bottom: 7px;
     }
      .borderCircle {
+         border: 4px solid #f7cf25;
          border-radius: 999999px;
          height: 50%;
          width: 50%;
          margin: 0px auto;
     }
-     .headingPostTitle {
+    .headingPostTitle {
+         color: #222222;
+         font-size: 2.5rem;
+         line-height: 1;
+         font-weight: 800;
+         letter-spacing: -0.05rem;
+         padding-top: 0.25rem;
+         padding-bottom: 0.25rem;
+         padding-right: 0rem;
+         padding-left: 0rem;
+    }
+    .headingPostTitleId {
          color: #222222;
          font-size: 2.5rem;
          line-height: 1;
